welcome.lessons.welcome.array.search.IndexOfValue.scala.error
indexOfValue:3: error: '<-' expected but ')' found.
  for ( i<=0 to 9 ){
                  ^indexOfValue:10: error: illegal start of simple expression
} 
^